Fix overflowX on phones

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+body,
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
