--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,6 +1,6 @@
 .aboutContainer {
   padding-inline: 20px;
-  padding-top: 50px;
+  padding-top: 30px;
   max-width: 65ch;
   margin-inline: auto;
   text-align: center;
@@ -11,6 +11,10 @@
 
   display: flex;
   flex-direction: column;
+}
+
+.aboutContainer h1 {
+  padding-bottom: 20px;
 }
 
 .aboutContainer p {
